# feishulib

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  pytest.ini
.github/workflows/: publish.yml
docs/: event-security.md  protocol.md
docs/issues/: 20260721-preserve-event-metadata.md
docs/plan/: 2026-07-21-generic-open-api-request.md  2026-07-21-preserve-event-metadata.md
examples/: README.md  __init__.py  _common.py  bot_identity.py  card_action_bot.py  chat_bot.py  delete_message.py  download_resource.py  reply_message.py  reply_text.py  send_card.py  send_message.py  send_text.py  update_card.py  update_message.py
scripts/: release.sh  verify
src/feishu_im/: __init__.py  auth.py  channel.py  chat_bot.py  client.py  config.py  events.py  http.py  protocol.py  websocket.py
src/feishu_im/proto/: frame.proto  frame_pb2.py
src/feishulib/: __init__.py  auth.py  channel.py  client.py  config.py  events.py  exceptions.py  http.py  models.py  protocol.py  websocket.py
src/feishulib/proto/: frame.proto  frame_pb2.py
tests/: conftest.py
tests/fixtures/: card_action.json  message_receive.json  ping_frame.hex
tests/unit/: test_auth.py  test_channel.py  test_chat_bot_example.py  test_client.py  test_config.py  test_events.py  test_example_catalog.py  test_http.py  test_models.py  test_protocol.py  test_public_api.py  test_websocket.py
