[project]
name = "feishu-im-client"
version = "0.1.0"
description = "Async Pythonic Feishu IM client"
readme = "README.md"
authors = [
    { name = "morrisx", email = "ifme.in@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "protobuf>=5",
    "websockets>=14",
]

[build-system]
requires = ["uv_build>=0.11.28,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "feishu_im"

[dependency-groups]
dev = [
    "grpcio-tools>=1.66",
    "pyright>=1.1.390",
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5",
    "ruff>=0.6",
]

[tool.pyright]
include = ["src/feishu_im"]
exclude = ["tests", "src/feishu_im/proto"]
pythonVersion = "3.12"
typeCheckingMode = "strict"
reportMissingTypeStubs = "none"
