[project]
name = "feishulib"
version = "0.1.0"
description = "Async Pythonic Feishu IM client"
readme = "README.md"
authors = [
    { name = "morrisx", email = "ifme.in@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "protobuf>=7.35.0,<8",
    "websockets>=14",
]

[build-system]
requires = ["uv_build>=0.11.28,<0.12.0"]
build-backend = "uv_build"

[tool.uv]
cache-dir = ".cache/uv"

[tool.uv.build-backend]
module-name = "feishulib"

[dependency-groups]
dev = [
    "grpcio-tools>=1.82.1,<1.83",
    "pyright>=1.1.390",
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5",
    "ruff>=0.6",
]

[tool.pytest.ini_options]
cache_dir = ".cache/.pytest_cache"

[tool.ruff]
cache-dir = ".cache/.ruff_cache"

[tool.coverage.run]
data_file = ".cache/.coverage"

[tool.coverage.html]
directory = ".cache/htmlcov"

[tool.pyright]
include = ["src/feishulib"]
exclude = ["tests", "src/feishulib/proto"]
pythonVersion = "3.12"
typeCheckingMode = "strict"
reportMissingTypeStubs = "none"
